--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
     width: 700px;
     height: 10rem;
     margin: auto;
-    padding: 2rem;
+    /* padding: 2rem; */
     z-index: 5;
     position: relative;
 }
@@ -68,7 +68,7 @@ header a {
 }
 
 main {
-    padding-top: 7rem;
+    padding-top: 5rem;
     width: 65%;
     margin: auto;
     background: linear-gradient(180deg, #E9DBFB 0%,
@@ -80,12 +80,12 @@ main {
 }
 
 section {
-    padding: 4rem;
+    padding-top: 5rem;
 }
 
 #hands {
     position: absolute;
-    margin-top: -3rem;
+    margin-top: -5rem;
     margin-left: 0.5rem;    
 }
 
